Added an access point to a remote microservice
